--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   iconsax_flutter: ^1.0.0
   flutter_svg: ^2.0.10+1
+  firebase_core: ^2.31.1
+  firebase_auth: ^4.19.6
 
 dev_dependencies:
   flutter_test:
