--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   firebase_core: ^2.31.1
   firebase_auth: ^4.19.6
+  cloud_firestore: ^4.17.4
 
 dev_dependencies:
   flutter_test:
