--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   firebase_core: ^2.31.1
   firebase_auth: ^4.19.6
   cloud_firestore: ^4.17.4
+  uuid: ^4.4.0
+  intl: ^0.19.0
+  image_picker: ^1.1.1
+  firebase_storage: ^11.7.6
 
 dev_dependencies:
   flutter_test:
